--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,6 +1,4 @@
-column_width = 120
-line_endings = "Unix"
-indent_type = "Spaces"
+column_width = 80
 indent_width = 2
-quote_style = "AutoPreferDouble"
+quote_style = "AutoPreferSingle"
 call_parentheses = "None"
